@@ -139,11 +139,13 @@ extern char		*path_aux;
 extern int              LOGLEVEL;
 
 extern char            *PJobSubState[];
+extern char             mom_host[];
 
 
 /* external prototypes */
 
 u_long resc_used(job *,char *,u_long (*f) A_((resource *)));
+static void preobit_reply A_((int));
 static void obit_reply A_((int));
 extern int tm_reply A_((int,int,tm_event_t));
 extern u_long addclient A_((char *));
@@ -332,13 +334,11 @@ void scan_for_exiting()
   static char noconnect[] =
     "No contact with server at hostaddr %x, port %d, jobid %s errno %d";
 
-  pid_t		cpid;
   int		found_one = 0;
   job		*nxjob;
   job		*pjob;
   task		*ptask;
   obitent	*pobit;
-  struct batch_request	*preq;
   int		sock;
   int		sock3;
   char		*svrport;
@@ -691,7 +691,7 @@ void scan_for_exiting()
       LOG_EVENT(
         PBSEVENT_DEBUG,
         PBS_EVENTCLASS_REQUEST,
-        "jobobit", 
+        "scan_for_exiting", 
         log_buffer);
 
       /*
@@ -722,7 +722,7 @@ void scan_for_exiting()
       ToServerDIS,
       pjob->ji_qs.ji_un.ji_momt.ji_svraddr,
       port, 
-      obit_reply);
+      preobit_reply);
 
     if (LOGLEVEL >= 2)
       {
@@ -730,133 +730,427 @@ void scan_for_exiting()
         PBSEVENT_DEBUG,
         PBS_EVENTCLASS_JOB,
         pjob->ji_qs.ji_jobid,
-        "performing job clean-up");
+        "sending preobit jobstat");
       }
 
-    cpid = fork_me(sock3);
+    pjob->ji_qs.ji_substate = JOB_SUBSTATE_PREOBIT;
 
-    if (cpid > 0) 
+    if (found_one++ >= 2) 
       {
-      /* parent = mark that it is being sent */
-
-      pjob->ji_qs.ji_substate = JOB_SUBSTATE_OBIT;
-
-      if (found_one++ == 0) 
-        {
-        continue;	/* look for one more */
-        }
- 
       break;	/* two at a time is our limit */
-      } 
-    else if (cpid < 0)
-      {
-      continue;
       }
 
-    /* child */
-
-    /* check epilog script */
-
-    if ((pjob->ji_wattr[(int)JOB_ATR_interactive].at_flags & ATR_VFLAG_SET) &&
-         pjob->ji_wattr[(int)JOB_ATR_interactive].at_val.at_long) 
-      {
-      /* job is interactive */
-
-      if (run_pelog(PE_EPILOG,path_epilog,pjob,PE_IO_TYPE_NULL) != 0)
-        {
-        log_err(-1,id,"system epilog failed - interactive job");
-        }
-
-      if (run_pelog(PE_EPILOGUSER,path_epiloguser,pjob,PE_IO_TYPE_NULL) != 0)
-        {
-        log_err(-1,id,"user epilog failed - interactive job");
-        }
-      } 
-    else 
-      {
-      /* job is not interactive */
-
-      int rc;
-
-      if ((rc = run_pelog(PE_EPILOG,path_epilog,pjob,PE_IO_TYPE_STD)) != 0)
-        {
-        sprintf(log_buffer,"system epilog failed w/rc=%d",
-          rc);
-
-        log_err(-1,id,log_buffer);
-        }
-
-      if (run_pelog(PE_EPILOGUSER,path_epiloguser,pjob,PE_IO_TYPE_STD) != 0)
-        {
-        log_err(-1,id,"user epilog failed");
-        }
-      }    /* END else (jobisinteractive) */
-
-#ifdef PENABLE_DYNAMIC_CPUSETS
-
-    /* FIXME: this is the wrong place for this code.
-     * it should be called from job_purge() */
-    pwdp = getpwuid(pjob->ji_qs.ji_un.ji_momt.ji_exuid);
-    strncpy(cQueueName,pwdp->pw_name,3);
-    strncat(cQueueName,pjob->ji_qs.ji_jobid,5);
-
-    /* FIXME: use the path_jobs variable */
-    strcpy(cPermFile,PBS_SERVER_HOME);
-    strcat(cPermFile,"/mom_priv/jobs/");
-    strcat(cPermFile,cQueueName);
-    strcat(cPermFile,".CS");
-
-    cpusetDestroy(cQueueName);
-    unlink(cPermFile);
-
-    memset(cQueueName,0,sizeof(cQueueName));
-    memset(cPermFile,0,sizeof(cPermFile));
-
-    /* NOTE:  must clear cpusets even if child not captured, ie, mom is down when job completes */
-
-#endif /* PENABLE_DYNAMIC_CPUSETS */
-
-    /* send the job obiturary notice to the server */
-
-    preq = alloc_br(PBS_BATCH_JobObit);
-
-    strcpy(preq->rq_ind.rq_jobobit.rq_jid,pjob->ji_qs.ji_jobid);
-
-    preq->rq_ind.rq_jobobit.rq_status = 
-      pjob->ji_qs.ji_un.ji_momt.ji_exitstat;
-
-    CLEAR_HEAD(preq->rq_ind.rq_jobobit.rq_attr);
-
-    resc_access_perm = ATR_DFLAG_RDACC;
-
-    encode_used(pjob,&preq->rq_ind.rq_jobobit.rq_attr);
+    /* send the pre-obit job stat request */
 
     DIS_tcp_setup(sock3);
 
-    encode_DIS_ReqHdr(sock3,PBS_BATCH_JobObit,pbs_current_user);
-
-    encode_DIS_JobObit(sock3,preq);
-
-    encode_DIS_ReqExtend(sock3,0);
+    if (encode_DIS_ReqHdr(sock3,PBS_BATCH_StatusJob,pbs_current_user) ||
+        encode_DIS_Status(sock3,pjob->ji_qs.ji_jobid,NULL) ||
+        encode_DIS_ReqExtend(sock3,NULL))
+      { 
+      return;
+      }
 
     DIS_tcp_wflush(sock3);
-
-    close(sock3);
-
-    log_record(
-      PBSEVENT_DEBUG, 
-      PBS_EVENTCLASS_JOB,
-      pjob->ji_qs.ji_jobid, 
-      "Obit sent");
-
-    exit(0);
-    }  /* END for (pjob) */
+    }
 
   if (pjob == 0) 
     exiting_tasks = 0; /* went through all jobs */
 
   return;
   }  /* END scan_for_exiting() */
+
+
+void post_epilogue(
+
+  job *pjob,
+  int  ev)
+
+{
+  int sock;
+  char *svrport;
+  int port;
+  struct batch_request *preq;
+  static char noconnect[] =
+    "No contact with server at hostaddr %x, port %d, jobid %s errno %d";
+
+  /* open new connection */
+  svrport = strchr(pjob->ji_wattr[(int)JOB_ATR_at_server].at_val.at_str,(int)':');
+
+  if (svrport)
+    port = atoi(svrport + 1);
+  else
+    port = default_server_port;
+
+  sock = client_to_svr(pjob->ji_qs.ji_un.ji_momt.ji_svraddr,port,1,NULL);
+
+  if (sock < 0)
+    {
+    sprintf(log_buffer,noconnect,
+      pjob->ji_qs.ji_un.ji_momt.ji_svraddr,
+      port,
+      pjob->ji_qs.ji_jobid,
+      errno);
+
+    LOG_EVENT(
+      PBSEVENT_DEBUG,
+      PBS_EVENTCLASS_REQUEST,
+      "post_epilogue",
+      log_buffer);
+
+    /*
+     * return (break out of loop), leave exiting_tasks set
+     * so Mom will retry Obit when server is available
+     */
+
+    return;
+    }
+
+  pjob->ji_momhandle = sock;
+
+  add_conn(
+    sock, 
+    ToServerDIS,
+    pjob->ji_qs.ji_un.ji_momt.ji_svraddr,
+    port, 
+    obit_reply);
+
+#ifdef PENABLE_DYNAMIC_CPUSETS
+
+  /* FIXME: this is the wrong place for this code.
+   * it should be called from job_purge() */
+  pwdp = getpwuid(pjob->ji_qs.ji_un.ji_momt.ji_exuid);
+  strncpy(cQueueName,pwdp->pw_name,3);
+  strncat(cQueueName,pjob->ji_qs.ji_jobid,5);
+
+  /* FIXME: use the path_jobs variable */
+  strcpy(cPermFile,PBS_SERVER_HOME);
+  strcat(cPermFile,"/mom_priv/jobs/");
+  strcat(cPermFile,cQueueName);
+  strcat(cPermFile,".CS");
+
+  cpusetDestroy(cQueueName);
+  unlink(cPermFile);
+
+  memset(cQueueName,0,sizeof(cQueueName));
+  memset(cPermFile,0,sizeof(cPermFile));
+
+  /* NOTE:  must clear cpusets even if child not captured, ie, mom is down when job completes */
+
+#endif /* PENABLE_DYNAMIC_CPUSETS */
+
+  /* send the job obiturary notice to the server */
+
+  preq = alloc_br(PBS_BATCH_JobObit);
+
+  if (preq==NULL)
+    return;
+
+  strcpy(preq->rq_ind.rq_jobobit.rq_jid,pjob->ji_qs.ji_jobid);
+
+  preq->rq_ind.rq_jobobit.rq_status = 
+    pjob->ji_qs.ji_un.ji_momt.ji_exitstat;
+
+  CLEAR_HEAD(preq->rq_ind.rq_jobobit.rq_attr);
+
+  resc_access_perm = ATR_DFLAG_RDACC;
+
+  encode_used(pjob,&preq->rq_ind.rq_jobobit.rq_attr);
+
+  DIS_tcp_setup(sock);
+
+  if (encode_DIS_ReqHdr(sock,PBS_BATCH_JobObit,pbs_current_user) ||
+      encode_DIS_JobObit(sock,preq) ||
+      encode_DIS_ReqExtend(sock,0))
+    return;
+
+  DIS_tcp_wflush(sock);
+
+  log_record(
+    PBSEVENT_DEBUG, 
+    PBS_EVENTCLASS_JOB,
+    pjob->ji_qs.ji_jobid, 
+    "Obit sent");
+}
+
+
+
+static void preobit_reply(
+
+  int sock)
+
+  {
+  char id[]="preobit_reply";
+  pid_t cpid;
+  job *pjob;
+  int irtn;
+  struct batch_request *preq;
+  struct brp_status    *pstatus;
+  svrattrl             *sattrl;
+  int  runepilogue = 0;
+  int  deletejob = 0;
+
+  /*struct batch_status *bsp = NULL;*/
+
+      log_record(
+        PBSEVENT_DEBUG,
+        PBS_EVENTCLASS_SERVER,
+        id,
+        "top of preobit_reply");
+
+  /* read and decode the reply */
+
+
+  preq = alloc_br(PBS_BATCH_StatusJob);
+
+  CLEAR_HEAD(preq->rq_ind.rq_status.rq_attr);
+
+  while ((irtn = DIS_reply_read(sock,&preq->rq_reply)) &&
+         (errno == EINTR));
+
+  if (irtn != 0) 
+    {
+    sprintf(log_buffer,"decode_DIS_Status failed, rc=%d sock=%d",
+      irtn, 
+      sock);
+
+    log_err(errno,id,log_buffer);
+
+    preq->rq_reply.brp_code = -1;
+    }
+
+log_record(
+  PBSEVENT_DEBUG,
+  PBS_EVENTCLASS_SERVER,
+  id,
+  "decode_DIS_Status worked, top of while loop");
+
+
+  /* find the job that triggered this req */
+  pjob = (job *)GET_NEXT(svr_alljobs);
+
+  while (pjob != NULL) 
+    {
+
+    if ((pjob->ji_qs.ji_substate == JOB_SUBSTATE_PREOBIT) &&
+        (pjob->ji_momhandle == sock)) 
+      {
+      break;
+      }
+    pjob = (job *)GET_NEXT(pjob->ji_alljobs);
+    }
+
+  if (pjob == NULL)
+    {
+    free_br(preq);
+
+    shutdown(sock,SHUT_RDWR);
+
+    close_conn(sock);
+
+    return;
+    }
+    
+  /* we've got a job in PREOBIT and matches the socket, now
+     inspect the results of the job stat */
+
+  switch (preq->rq_reply.brp_code) 
+    {
+    case PBSE_CLEANEDOUT:
+    case PBSE_UNKJOBID:
+
+      /* this is the simple case of the job being purged from the server */
+      sprintf(log_buffer,
+        "preobit_reply, unknown on server, deleting locally");
+
+      deletejob=1;
+
+      break;  /* not reached */
+
+    case PBSE_NONE:
+
+      log_record(
+        PBSEVENT_DEBUG,
+        PBS_EVENTCLASS_SERVER,
+        id,
+        "in while loop, no error from job stat");
+
+      if (preq->rq_reply.brp_choice == BATCH_REPLY_CHOICE_Status)
+        {
+        pstatus = (struct brp_status *)GET_NEXT(preq->rq_reply.brp_un.brp_status);
+        }
+      else
+        {
+        sprintf(log_buffer,"BUG: preq->rq_reply.brp_choice==%d",preq->rq_reply.brp_choice);
+
+        break;
+        }
+
+      if (pstatus == NULL)
+        {
+        sprintf(log_buffer,"BUG: pstatus==NULL");
+
+        break;
+        }
+
+      if (strcmp(pstatus->brp_objname,pjob->ji_qs.ji_jobid))
+        {
+        sprintf(log_buffer,
+          "BUG: mismatched jobid in preobit_reply (%s != %s)",
+          pstatus->brp_objname,pjob->ji_qs.ji_jobid);
+
+        break;
+        }
+
+      sattrl = (svrattrl *)GET_NEXT(pstatus->brp_attr);
+  
+      while (sattrl != NULL)
+        {
+        if (!strcmp(sattrl->al_name,ATTR_exechost))
+          {
+          runepilogue=1;
+          if (strncmp(sattrl->al_value,pjob->ji_hosts[0].hn_host,strlen(pjob->ji_hosts[0].hn_host)))
+            {
+            /* the job was re-run elsewhere */
+            sprintf(log_buffer,"first host DOES NOT match me: %s!=%s",sattrl->al_value,pjob->ji_hosts[0].hn_host);
+            runepilogue=0;
+            deletejob=1;
+            }
+            
+          break;
+          }
+            
+        sattrl = (svrattrl *)GET_NEXT(sattrl->al_link);
+        } 
+      
+      break;
+
+    default:
+        /* not sure what happened */
+
+        sprintf(log_buffer,
+          "something bad happened: %d",preq->rq_reply.brp_code);
+
+      break;
+    } /* END switch (preq->rq_reply.brp_code) */
+
+
+  /* we've inspected the server's response and can now act */
+
+  free_br(preq);
+
+  shutdown(sock,SHUT_RDWR);
+
+  close_conn(sock);
+
+  if (deletejob)
+    {
+    log_record(
+      PBSEVENT_ERROR,
+      PBS_EVENTCLASS_JOB,
+      pjob->ji_qs.ji_jobid,
+      log_buffer);
+
+    if (!(pjob->ji_wattr[(int)JOB_ATR_interactive].at_flags & ATR_VFLAG_SET) ||
+        (pjob->ji_wattr[(int)JOB_ATR_interactive].at_val.at_long == 0))
+      {
+      int x;	/* dummy */
+      /* do this if not interactive */
+
+      unlink(std_file_name(pjob,StdOut,&x));
+      unlink(std_file_name(pjob,StdErr,&x));
+      unlink(std_file_name(pjob,Chkpt,&x));
+      }
+
+    mom_deljob(pjob);
+
+    return;
+    }
+
+  if (!runepilogue)
+    {
+    log_record(
+      PBSEVENT_ERROR,
+      PBS_EVENTCLASS_JOB,
+      pjob->ji_qs.ji_jobid,
+      log_buffer);
+
+    pjob->ji_qs.ji_substate = JOB_SUBSTATE_EXITING;
+    pjob->ji_momhandle = -1;
+
+    return;
+    }
+
+
+  /* at this point, server gave us a valid response so we can run epilogue */
+
+  if (LOGLEVEL >= 2)
+    {
+    log_record(
+      PBSEVENT_DEBUG,
+      PBS_EVENTCLASS_JOB,
+      pjob->ji_qs.ji_jobid,
+      "performing job clean-up");
+    }
+
+  cpid = fork_me(-1);
+
+  if (cpid > 0) 
+    {
+    /* parent = mark that it is being sent */
+
+    pjob->ji_qs.ji_substate = JOB_SUBSTATE_OBIT;
+    pjob->ji_momsubt = cpid;
+    pjob->ji_mompost = post_epilogue;
+
+    return;
+    } 
+  else if (cpid < 0)
+    {
+    return;
+    }
+
+  /* child */
+
+  /* check epilog script */
+
+  if ((pjob->ji_wattr[(int)JOB_ATR_interactive].at_flags & ATR_VFLAG_SET) &&
+       pjob->ji_wattr[(int)JOB_ATR_interactive].at_val.at_long) 
+    {
+    /* job is interactive */
+
+    if (run_pelog(PE_EPILOG,path_epilog,pjob,PE_IO_TYPE_NULL) != 0)
+      {
+      log_err(-1,id,"system epilog failed - interactive job");
+      }
+
+    if (run_pelog(PE_EPILOGUSER,path_epiloguser,pjob,PE_IO_TYPE_NULL) != 0)
+      {
+      log_err(-1,id,"user epilog failed - interactive job");
+      }
+    } 
+  else 
+    {
+    /* job is not interactive */
+
+    int rc;
+
+    if ((rc = run_pelog(PE_EPILOG,path_epilog,pjob,PE_IO_TYPE_STD)) != 0)
+      {
+      sprintf(log_buffer,"system epilog failed w/rc=%d",
+        rc);
+
+      log_err(-1,id,log_buffer);
+      }
+
+    if (run_pelog(PE_EPILOGUSER,path_epiloguser,pjob,PE_IO_TYPE_STD) != 0)
+      {
+      log_err(-1,id,"user epilog failed");
+      }
+    }    /* END else (jobisinteractive) */
+
+  exit(0);
+  }  /* END preobit_reply() */
 
 
 
