@@ -30,6 +30,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - change fclose to pclose to close submit filter pipe (ABCC)
   e - add support for Cray XT size and larger qstat task reporting (ORNL)
   b - pbs_demux is now built with pbs_mom instead of with clients
+  e - epilogue will only run if job is still valid on exec node
 
 2.1.9
   f - new queue attribute disallowed_types, currently recognized types:
